addBook page complete

--- a/web/add/book.html
+++ b/web/add/book.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>Wrapper HTML for App</title>
+
+    <link type="text/css" rel="book.css"/>
     <script>
         var isomorphicDir = "../add_book/sc/"
     </script>
